bk_ida/gccida/c3/df_analyse_1
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/df_analyse_1/src/df.c:2406:1: error: must use 'enum' tag to refer to type 'df_ref_flags'
df_ref_flags v5; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/df_analyse_1/src/df.c:2676:4: error: expected ';' after expression
rtx v275; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/df_analyse_1/src/df.c:2676:5: error: use of undeclared identifier 'v275'
rtx v275; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/df_analyse_1/src/df.c:2739:4: error: expected ';' after expression
rtx v338; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/df_analyse_1/src/df.c:2739:5: error: use of undeclared identifier 'v338'
rtx v338; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/df_analyse_1/src/df.c:2740:4: error: expected ';' after expression
rtx v339; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/df_analyse_1/src/df.c:2740:5: error: use of undeclared identifier 'v339'
rtx v339; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/df_analyse_1/src/df.c:2751:4: error: expected ';' after expression
rtx v350; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/df_analyse_1/src/df.c:2751:5: error: use of undeclared identifier 'v350'
rtx v350; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/df_analyse_1/src/df.c:2752:4: error: expected ';' after expression
rtx v351; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/df_analyse_1/src/df.c:2752:5: error: use of undeclared identifier 'v351'
rtx v351; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/df_analyse_1/src/df.c:2777:4: error: expected ';' after expression
rtx v376; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/df_analyse_1/src/df.c:2777:5: error: use of undeclared identifier 'v376'
rtx v376; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/df_analyse_1/src/df.c:2786:4: error: expected ';' after expression
rtx v385; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/df_analyse_1/src/df.c:2786:5: error: use of undeclared identifier 'v385'
rtx v385; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/df_analyse_1/src/df.c:2934:39: error: expected expression
df_insn_refs_record( v6, v71, *( rtx *)&flags, v69, v4, v5); 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/df_analyse_1/src/df.c:2962:39: error: expected expression
df_insn_refs_record( v6, v76, *( rtx *)&flags, v74, v4, v5); 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/df_analyse_1/src/df.c:3115:12: error: expected expression
*( _OWORD *)&v24[v25].defs = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/df_analyse_1/src/df.c:3115:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v24[v25].defs = 0LL; 
   ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/df_analyse_1/src/obj/df.o] Error 1
